--- a/main/res/layout/activity_start.xml
+++ b/main/res/layout/activity_start.xml
@@ -58,6 +58,9 @@
                 android:layout_marginLeft="20sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:checked="true"
+                android:textOn="ON"
+                android:textOff="OFF"
                 />
         </LinearLayout>
     </LinearLayout>
